--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   </head>
 
+  <meta property="og:title" content="💚Sarah's sweet site😁" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://snaanortey.github.io/About-me/" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/snaanortey/About-me/main/Images/og.jpeg" />
+  <meta property="og:image:width" content="1000" />
+  <meta property="og:image:height" content="619" />
+  <meta property="og:description"
+  content="Here's to share some of mine with you" />
+
   <body>
 
     <div class="firstcontainer">
@@ -33,20 +42,23 @@
         <div class="skill-row">
           <img class="" src="" alt="">
           <h3>HTML, CSS, Javascript</h3>
-          <p>I can create websites using html 5 and design them using CSS. I can also build apps using Javascript.</p>
+          <p>I can create websites using html 5 and design them using CSS. I don't build apps yet, but very soon :) I will,
+            and when I do, I def will share them with you, cos I can. And why not?! At the moment, let's just say
+            I'm a novice at the Almighty <strong>Javascript</strong>.</p>
         </div>
         <div class="skill-row">
           <img class="" src="" alt="">
           <h3>Finance and Accounting (US GAAP and IFRS)</h3>
           <p>I'm a finance analyst at Amazon. I do a lot of stuff in this role. 30% of the time, I review and analyse financial statements.
-            70% of the time I'm working on new launches, automations, improving processes or having meetings with Business Partners (BPs). BPs are those who
+            This is what you'd expect me to do 100% of the time, but no.
+            70% of the time I'm working on new setting up finance systems for new geo launches, automations of our processes, improving our processes or having meetings with Business Partners (BPs). BPs are those who
             interact directly with our customers. They help me understand the business operations better. Most importantly, BPs give me practical business updates,
             which might influence Accounting and Finance output.</p>
 
             <div class="skill-row">
               <img class="" src="" alt="">
               <h3>SQL and Tableau</h3>
-              <p> My SQL skills help me pull relevant data from large databases and my tableau skills help me present these data in visually appealing and easy-to-understand formats.</p>
+              <p>My SQL skills help me pull relevant data from large databases and my tableau skills help me present these data in visually appealing and easy-to-understand formats.</p>
             </div>
 
         </div>
@@ -54,8 +66,11 @@
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>I love to share my journey about switching careers and geographies from tax in Ghana to finance/accounting in London (working for EMEA).</h3>
-        <p>If you want to hear my story, share yours, get some tips, validate your ideas or plans or just rant, I'll love to hear from you.</p>
+        <h3>I love to share my journey about switching careers and geographies from tax in Ghana to finance/accounting in London (working for EMEA).
+        I believe that there is so much to explore in this world, so I am always looking for the next small challenge.</h3>
+        <p>If you want to hear my story, share yours, get some tips on moving to a different field, validate your ideas or plans, or just rant, I'll love to hear from you.</p>
+
+<p>P.S. I'm not even 10% done with my website. Come back next month and be wowed!😉</p>
         <a class="btn" href="mailto:nortey.sarah@gmail.com">CONTACT ME</a>
       </div>
     </div>
