--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <title>Sarah Nortey</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-  </head>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Merriweather&family=Montserrat&family=Pacifico&family=Sacramento&display=swap" rel="stylesheet">
+
+
+    <!--adding an open graph tag-->
   <meta property="og:title" content="💚Sarah's sweet site😁" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://snaanortey.github.io/About-me/" />
@@ -19,26 +21,37 @@
   <meta property="og:description"
   content="Here's to share some of mine with you" />
 
+  </head>
+
+
   <body>
 
     <div class="firstcontainer">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-      <h1>I'm Sarah,</h1>
-      <p>a finance analyst who codes😉.</p>
+      <h1>Hey, I'm Sarah...</h1>
+      <p>a finance analyst who codes😉</p>
       <img class="button-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
 
     <div class="middle-container">
-      <div class="profile">
         <img id="profile-pic" src="images/sarah.png" alt="profile-pic" >
-        <h2>Hello,</h2>
-        <p>I love Friday nights, because then the weekend looks fresh and long. I love to sit in my sofa and eat fried plantain and salted peanuts while watching an interesting series on Netflix or BBC
+
+        <p class="intro">I love Friday nights, because then the weekend looks fresh and long. I love to sit in my sofa with <a href="https://www.instagram.com/ehimah/">Babe</a> and eat fried plantain and salted peanuts while watching an interesting series on Netflix or BBC
           like "You" or "Top Boy."</p>
+
+          <p>Other things I love to do are:</p>
+            <li><a href="https://www.instagram.com/naanorks/">traveling</a></li>
+            <li><a href="https://www.instagram.com/naanorks/">picture and video taking, and</a></li>
+            <li>awkward, but <a href="https://media.giphy.com/media/4MWkXInVHgWedob2uH/giphy.gif">frying plantain</a> </li>
+<br>
+            <img src="https://media.giphy.com/media/l2Rnq6q0bKp1vOu4g/giphy.gif" alt="plantain-gif">
+
       </div>
       <hr>
       <div class="skills">
         <h2>My Skills</h2>
+        <img src="https://media.giphy.com/media/RbDKaczqWovIugyJmW/giphy.gif" alt="coding-gif">
         <div class="skill-row">
           <img class="" src="" alt="">
           <h3>HTML, CSS, Javascript</h3>
