--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
           <p>Other things I love to do are:</p>
             <li><a href="https://www.instagram.com/naanorks/">traveling</a></li>
-            <li><a href="https://www.instagram.com/naanorks/">picture and video taking, and</a></li>
-            <li>awkward, but <a href="https://media.giphy.com/media/4MWkXInVHgWedob2uH/giphy.gif">frying plantain</a> </li>
+            <li><a href="https://www.instagram.com/naanorks/">picture and video taking</a> ,and</li>
+            <li>awkward, but <a href="https://media.giphy.com/media/65NsGYdc3EQPOf2htV/giphy.gif">frying plantain</a> </li>
 <br>
             <img src="https://media.giphy.com/media/l2Rnq6q0bKp1vOu4g/giphy.gif" alt="plantain-gif">
 
@@ -62,16 +62,23 @@
         <div class="skill-row">
           <img class="" src="" alt="">
           <h3>Finance and Accounting (US GAAP and IFRS)</h3>
-          <p>I'm a finance analyst at Amazon. I do a lot of stuff in this role. 30% of the time, I review and analyse financial statements.
+          <p>I'm a finance analyst at Amazon. I do a lot of stuff in this role. 30% of the time,
+            I review and analyse financial statements.
             This is what you'd expect me to do 100% of the time, but no.
-            70% of the time I'm working on new setting up finance systems for new geo launches, automations of our processes, improving our processes or having meetings with Business Partners (BPs). BPs are those who
-            interact directly with our customers. They help me understand the business operations better. Most importantly, BPs give me practical business updates,
+            70% of the time I'm working on setting up accounting and finance systems
+            for new geo launches, automations of our processes (these include some tech
+            buzz like UAT. UAT is when I test a new tech system to be sure it works as expected)
+            or
+            having meetings with Business Partners (BPs). BPs are those who
+            interact directly with our customers. They help me understand the business
+            operations better. Most importantly, BPs give me practical business updates,
             which might influence Accounting and Finance output.</p>
 
             <div class="skill-row">
               <img class="" src="" alt="">
               <h3>SQL and Tableau</h3>
-              <p>My SQL skills help me pull relevant data from large databases and my tableau skills help me present these data in visually appealing and easy-to-understand formats.</p>
+              <p>My SQL skills help me pull relevant data from large databases and my tableau
+                skills help me present these data in visually appealing and easy-to-understand formats.</p>
             </div>
 
         </div>
@@ -80,10 +87,11 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>I love to share my journey about switching careers and geographies from tax in Ghana to finance/accounting in London (working for EMEA).
-        I believe that there is so much to explore in this world, so I am always looking for the next small challenge.</h3>
-        <p>If you want to hear my story, share yours, get some tips on moving to a different field, validate your ideas or plans, or just rant, I'll love to hear from you.</p>
+        I believe that there is so much to explore in this world, so I am always looking for the next "small" challenge.</h3>
+        <p>If you want to hear my story, share yours, get some tips on moving to a different field, validate your ideas or plans, or just rant,
+          I'll love to hear from you.</p>
 
-<p>P.S. I'm not even 10% done with my website. Come back next month and be wowed!😉</p>
+<p>P.S. I'm not even 0.5% done with my website. Come back next month and be wowed!😉</p>
         <a class="btn" href="mailto:nortey.sarah@gmail.com">CONTACT ME</a>
       </div>
     </div>
@@ -93,7 +101,7 @@
       <a class="footer-link" href="https://www.linkedin.com/in/sarah-naa-norkor-nortey-44930b151/">LinkedIn</a>
       <a class="footer-link" href="https://www.instagram.com/naanorks/">Instagram</a>
       <a class="footer-link" href="https://www.youtube.com/channel/UCwPTl8wQNA4NHvvGkBOjbaQ">Youtube</a>
-      <p>© Sarah Nortey</p>
+      <p>© Sarah Naa Norkor Nortey</p>
     </div>
 
   </body>
