--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
           <p>Other things I love to do are:</p>
             <li><a href="https://www.instagram.com/naanorks/">traveling</a></li>
-            <li><a href="https://www.instagram.com/naanorks/">picture and video taking</a> ,and</li>
+            <li><a href="https://www.instagram.com/naanorks/">picture and video taking</a> and</li>
             <li>awkward, but <a href="https://media.giphy.com/media/65NsGYdc3EQPOf2htV/giphy.gif">frying plantain</a> </li>
 <br>
             <img src="https://media.giphy.com/media/l2Rnq6q0bKp1vOu4g/giphy.gif" alt="plantain-gif">
