--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
             This is what you'd expect me to do 100% of the time, but no.
             70% of the time I'm working on setting up accounting and finance systems
             for new geo launches, automations of our processes (these include some tech
-            buzz like UAT. UAT is when I test a new tech system to be sure it works as expected)
-            or
+            buzzwords like UAT. UAT is when I test a new tech system to be sure it works as expected), or
             having meetings with Business Partners (BPs). BPs are those who
             interact directly with our customers. They help me understand the business
             operations better. Most importantly, BPs give me practical business updates,
