--- a/index.html
+++ b/index.html
@@ -1,107 +1,125 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Sarah Nortey</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Merriweather&family=Montserrat&family=Pacifico&family=Sacramento&display=swap" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <title>Sarah Nortey</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Merriweather&family=Montserrat&family=Pacifico&family=Sacramento&display=swap" rel="stylesheet">
 
 
-    <!--adding an open graph tag-->
+  <!--adding an open graph tag-->
   <meta property="og:title" content="💚Sarah's sweet site😁" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://snaanortey.github.io/About-me/" />
   <meta property="og:image" content="https://raw.githubusercontent.com/snaanortey/About-me/main/Images/og.jpeg" />
   <meta property="og:image:width" content="1000" />
   <meta property="og:image:height" content="619" />
-  <meta property="og:description"
-  content="Here's to share some of mine with you" />
+  <meta property="og:description" content="Here's to share some of mine with you" />
 
-  </head>
+</head>
 
 
-  <body>
+<body>
 
-    <div class="firstcontainer">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-      <h1>Hey, I'm Sarah...</h1>
-      <p>a finance analyst who codes😉</p>
-      <img class="button-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+  <div class="firstcontainer">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>Hey, I'm Sarah...</h1>
+    <h2>a finance analyst who codes😉</h2>
+    <img class="button-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+    <img id="profile-pic" src="images/sarah.png" alt="profile-pic">
+
+    <p class="intro">I love Friday nights, because then the weekend is fresh and long. I'll sit in my sofa with <a href="https://www.instagram.com/ehimah/">Babe</a>, eat fried plantain
+      and salted peanuts while watching a Netflix series like "You" or "Top Boy."</p>
+
+    <div class="hobbies">
+
+    I also love to
+      <a href="https://www.instagram.com/naanorks/">travel,</a>
+    <a href="https://www.instagram.com/naanorks/"> take pictures and videos</a> and
+    awkward, but <a href="https://media.giphy.com/media/65NsGYdc3EQPOf2htV/giphy.gif">fry plantain</a>
+      <br>
+      <img class="plantain-gif" src="https://media.giphy.com/media/l2Rnq6q0bKp1vOu4g/giphy.gif" alt="plantain-gif">
+
     </div>
 
-    <div class="middle-container">
-        <img id="profile-pic" src="images/sarah.png" alt="profile-pic" >
+    <hr class="line-break">
 
-        <p class="intro">I love Friday nights, because then the weekend looks fresh and long. I love to sit in my sofa with <a href="https://www.instagram.com/ehimah/">Babe</a> and eat fried plantain and salted peanuts while watching an interesting series on Netflix or BBC
-          like "You" or "Top Boy."</p>
+    <div class="skills">
+      <h2>My Skills</h2>
+      <img src="" alt="">
 
-          <p>Other things I love to do are:</p>
-            <li><a href="https://www.instagram.com/naanorks/">traveling</a></li>
-            <li><a href="https://www.instagram.com/naanorks/">picture and video taking</a> and</li>
-            <li>awkward, but <a href="https://media.giphy.com/media/65NsGYdc3EQPOf2htV/giphy.gif">frying plantain</a> </li>
-<br>
-            <img src="https://media.giphy.com/media/l2Rnq6q0bKp1vOu4g/giphy.gif" alt="plantain-gif">
-
+      <div class="skill-row">
+        <img class="code-img" src="https://media.giphy.com/media/RbDKaczqWovIugyJmW/giphy.gif" alt="coding-gif">
+        <h3>HTML, CSS, Javascript</h3>
+        <p>I can create websites like this using html 5 and design them using CSS. I don't build apps yet, but very soon :) I will,
+          and when I do, I def will share them with you, cos I can. And why not?! At the moment, let's just say
+          I'm a novice at the Almighty <strong>Javascript</strong>.</p>
       </div>
-      <hr>
-      <div class="skills">
-        <h2>My Skills</h2>
-        <img src="https://media.giphy.com/media/RbDKaczqWovIugyJmW/giphy.gif" alt="coding-gif">
-        <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>HTML, CSS, Javascript</h3>
-          <p>I can create websites using html 5 and design them using CSS. I don't build apps yet, but very soon :) I will,
-            and when I do, I def will share them with you, cos I can. And why not?! At the moment, let's just say
-            I'm a novice at the Almighty <strong>Javascript</strong>.</p>
-        </div>
-        <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>Finance and Accounting (US GAAP and IFRS)</h3>
-          <p>I'm a finance analyst at Amazon. I do a lot of stuff in this role. 30% of the time,
-            I review and analyse financial statements.
-            This is what you'd expect me to do 100% of the time, but no.
-            70% of the time I'm working on setting up accounting and finance systems
-            for new geo launches, automations of our processes (these include some tech
-            buzzwords like UAT. UAT is when I test a new tech system to be sure it works as expected), or
-            having meetings with Business Partners (BPs). BPs are those who
-            interact directly with our customers. They help me understand the business
-            operations better. Most importantly, BPs give me practical business updates,
-            which might influence Accounting and Finance output.</p>
 
-            <div class="skill-row">
-              <img class="" src="" alt="">
-              <h3>SQL and Tableau</h3>
-              <p>My SQL skills help me pull relevant data from large databases and my tableau
-                skills help me present these data in visually appealing and easy-to-understand formats.</p>
-            </div>
-
-        </div>
+      <div class="skill-row">
+        <img class="finance-img" src="https://media.giphy.com/media/f5kiRUtghEgWV5xMok/giphy.gif" alt="finance">
+        <h3>Finance and Accounting (US GAAP and IFRS)</h3>
+        <p>I'm a finance analyst at Amazon. 30% of the time,
+          I review and analyse financial statements.
+          The other 70% of the time, I'm working on setting up accounting and finance systems
+          for new geo launches, automations and improvement of our processes, or
+          meeting with Business Partners (BPs). BPs are those who
+          interact directly with our customers. They help me understand the business
+          operations better.</p>
       </div>
-      <hr>
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <h3>I love to share my journey about switching careers and geographies from tax in Ghana to finance/accounting in London (working for EMEA).
-        I believe that there is so much to explore in this world, so I am always looking for the next "small" challenge.</h3>
-        <p>If you want to hear my story, share yours, get some tips on moving to a different field, validate your ideas or plans, or just rant,
-          I'll love to hear from you.</p>
 
-<p>P.S. I'm not even 0.5% done with my website. Come back next month and be wowed!😉</p>
-        <a class="btn" href="mailto:nortey.sarah@gmail.com">CONTACT ME</a>
+      <div class="skill-row">
+        <img class="data-vis-img" src="https://media.giphy.com/media/3o7TKq5iDRluROfnUc/giphy.gif" alt="data-visualization">
+        <h3>SQL and Tableau</h3>
+        <p>My SQL skills help me pull relevant data from large databases and my tableau
+          skills help me present these data in visually appealing and easy-to-understand formats.</p>
       </div>
+
     </div>
 
+  </div>
 
-    <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/sarah-naa-norkor-nortey-44930b151/">LinkedIn</a>
-      <a class="footer-link" href="https://www.instagram.com/naanorks/">Instagram</a>
-      <a class="footer-link" href="https://www.youtube.com/channel/UCwPTl8wQNA4NHvvGkBOjbaQ">Youtube</a>
-      <p>© Sarah Naa Norkor Nortey</p>
-    </div>
+  <hr class="line-break">
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
 
-  </body>
+    <p class="contact-me">Reach out if you love tech and want to create something like this, on the side. Or if you like fried plantain and traveling.
+      Or none of these.
+      I'll love to hear from you.</p>
+
+    <p contact-me>P.S. I'm not even 7% done with my website. Come back next month and be wowed!😉</p>
+    <a class="btn" href="mailto:nortey.sarah@gmail.com">CONTACT ME</a>
+  </div>
+
+
+  <div class="bottom-container">
+
+    <div class="footer-link">
+    <span><a href="https://www.linkedin.com/in/sarah-naa-norkor-nortey-44930b151/">
+      <img class="linkedin" src="images/linkedin.png" alt="linkedin_icon">
+     </a></span>
+
+    <span><a href="https://www.instagram.com/naanorks/">
+      <img class="instagram" src="images/instagram.png" alt="instagram_icon">
+    </a></span>
+
+    <span><a href="https://www.youtube.com/channel/UCwPTl8wQNA4NHvvGkBOjbaQ">
+      <img class="youtube" src="images/youtube.png" alt="Youtube_icon">
+    </a></span>
+      </div>
+
+    <div>© 2022 Sarah Naa Norkor Nortey</div>
+  </div>
+
+</body>
+
 </html>
