--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </a></span>
       </div>
 
-    <div>© 2022 Sarah Naa Norkor Nortey</div>
+    <div class="trademark">© 2022 Sarah Naa Norkor Nortey</div>
   </div>
 
 </body>
