--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
   </div>
 
   <hr class="line-break">
+
   <div class="contact-me">
     <h2>Get In Touch</h2>
 
-    <p class="contact-me">Reach out if you love tech and want to create something like this, on the side. Or if you like fried plantain and traveling.
+    <p>Reach out if you love tech and want to create something like this, on the side. Or if you like fried plantain and traveling.
       Or none of these.
       I'll love to hear from you.</p>
 
-    <p contact-me>P.S. I'm not even 7% done with my website. Come back next month and be wowed!😉</p>
+    <p>P.S. I'm not even 7% done with my website. Come back next month and be wowed!😉</p>
     <a class="btn" href="mailto:nortey.sarah@gmail.com">CONTACT ME</a>
   </div>
 
